feat:代理模式（CGLib动态代理）。